test/cases/parsing/invalid_int_suffix.c
// RUN: %check -e %s

main()
{
	float f = 0f; // CHECK: error: invalid suffix on integer constant
}
